--- a/index(1).html
+++ b/index(1).html
@@ -27,11 +27,7 @@
                 <table>
                     <tr>
                         <td class="icon"><i class="fas fa-list-alt"></i></td>
-                        <td class="t"><span class="t2">Lorem</span> ipsum dolor sit amet consectetur adipisicing elit. Temporibus quasi vel voluptates, quaerat eius animi. Beatae, perferendis, odio animi vel dignissimos eligendi est distinctio esse pariatur tempora neque aut harum!
-                        Voluptatem, doloribus enim optio consequuntur modi minima odit nostrum officia hic provident possimus reiciendis excepturi culpa, ipsam nesciunt cumque nisi libero! Provident sint nisi ut molestiae fugit, harum quos soluta.
-                        Corrupti ab esse cupiditate, nemo veritatis laudantium, asperiores obcaecati, inventore sequi quia explicabo praesentium iste assumenda iusto nihil doloremque corporis animi ipsam? Quo, ut soluta. Quisquam autem nesciunt assumenda aperiam.
-                        Totam amet qui blanditiis mollitia ad sequi, dignissimos ab voluptate iste architecto perferendis eaque dicta dolores officiis esse aliquam consequatur accusantium consectetur magnam non odio error sed consequuntur dolorum. Itaque?
-                        Nam dicta distinctio est assumenda minima atque. Laudantium ipsum fuga dignissimos voluptate quibusdam quaerat! Numquam harum possimus qui asperiores a eaque, illo est exercitationem quasi. Nobis quod corrupti saepe placeat.</td>
+                        <td class="t"><span class="t2">Lorem</span> ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate similique nam eligendi voluptatem odit sapiente debitis nisi aspernatur libero sunt optio, atque consequuntur, praesentium voluptate fugit nihil aut, doloremque dolore? Cum amet molestiae ut excepturi deserunt culpa, architecto vitae fuga rerum incidunt soluta, expedita eos officia fugit, eius nulla praesentium?</td>
                     </tr>
                     <tr>
                         <td></td>
